can't use just #rs in title

--- a/songs/1234.md
+++ b/songs/1234.md
@@ -1,5 +1,5 @@
 ---
-title: 1234
+title: one-two-three-four
 artist: Feist
 key: C
 youtube: 6pYMZKVZ9Ws
@@ -7,7 +7,7 @@ youtube: 6pYMZKVZ9Ws
 
 CAPO 2
 
-[C] [C/B][Am][F]
+[C] [C/B][am][F]
 
 [C]One two [C/B]three four, t[Am]ell me that you l[F]ove me more
 [C]Sleepless [C/B]long nights, [Am]that was what my [F]youth was for
@@ -32,9 +32,9 @@ You're [F]changing your heart
 You [F]know who you are
 
 [C]One two [C/B]three four, fi[Am]ve six ni[F]ne and ten
-[C]Money can't [C/B]buy you ba[Am]ck the love that yo[F]u had th[C]e-e-en[C/B][Am][F][C][C/B][Am][F]
+[C]Money can't [C/B]buy you ba[Am]ck the love that yo[F]u had th[C]e-e-en[C/B][am][F][c][C/B][am][F]
 [C]One two, [C/B]three four, fi[Am]ve six, ni[F]ne and ten
-[C]Money can't [C/B]buy you ba[Am]ck the love that yo[F]u had th[C]e-e-en[C/B][Am][F][C][C/B][Am][F]
+[C]Money can't [C/B]buy you ba[Am]ck the love that yo[F]u had th[C]e-e-en[C/B][am][F][c][C/B][am][F]
 
 [G]Ohh oh oh
 You're [F]changing your heart
@@ -43,6 +43,6 @@ You [F]know who you are
 [G]Ohh oh oh
 You're [F]changing your heart
 [G]Ohh oh oh
-You [F]know who you aaa-a-are[C][Dm][Am][F]
+You [F]know who you aaa-a-are[C][dm][Am][f]
 Who you [C]aaa-a-a[Dm]-a-a-a[Am]re[F]
-Woo[C]hoo[Dm][Am][F]
+Woo[C]hoo[Dm][am][F]
